# ray_tracer_challange

./: .buildinfo  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  api_reference.html  conanfile.txt  deployer.py  et --hard d6a7ad5  genindex.html  index.html  meson.build  objects.inv  search.html  searchindex.js
.doctrees/: api_reference.doctree  environment.pickle  index.doctree
.github/workflows/: documentation.yml
_sources/: api_reference.rst.txt
apps/: CMakeLists.txt  main.cpp  meson.build
conan/: boost_ut.cmake  boost_ut.pc
conan/full_deploy/host/boost_ut/master/Release/x86_64/: conaninfo.txt  conanmanifest.txt
conan/full_deploy/host/boost_ut/master/Release/x86_64/lib/cxx/bmi/: boost.ut.pcm
conan/full_deploy/host/boost_ut/master/Release/x86_64/lib/pkgconfig/: boost_ut.pc
docs/: CMakeLists.txt  meson.build
docs/doxygen/: Doxyfile
docs/doxygen/html/: annotated.html  classes.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  dir_9654b8d08f4bba4e84b362c5fd320bee.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  main_8cpp.html  main_8cpp__incl.dot  structcat-members.html  structcat.html  stuff_8cpp.html
docs/doxygen/html/search/: all_0.js  all_2.js  all_3.js
docs/doxygen/latex/: dir_6719ab1f1f7655efc2fa43f7eb574fd1.tex  dir_9654b8d08f4bba4e84b362c5fd320bee.tex  files.tex  main_8cpp.tex  main_8cpp.tex.tmp  main_8cpp__incl.dot  structcat.tex  stuff_8cpp.tex
docs/doxygen/xml/: BDD_8cpp.xml  Doxyfile.xml  LICENSE_8md.xml  README_8md.xml  _8cmake-format_8py.xml  abort_8cpp.xml  apps_2main_8cpp.xml  attr_8cpp.xml  benchmark_2expect_8cpp.xml  benchmark_2suite_8cpp.xml  benchmark_2test_8cpp.xml  benchmark_8cpp.xml  canvas_8cpp.xml  canvas__test_8cpp.xml  classany__of.xml  classcalculator.xml  classcanvas_1_1canvas.xml  classcfg_1_1parallel__runner.xml  classcfg_1_1reporter.xml  classcfg_1_1runner.xml  classcolor_1_1color.xml  classfake__calculator.xml  classmatcher.xml  classmatrix_1_1matrix.xml  classray__sphere__intersections_1_1intersection.xml  classray__sphere__intersections_1_1ray.xml  classray__sphere__intersections_1_1sphere.xml  classray__sphere__intersections_1_1sphere_1_1intersection.xml  classtest__has__member__object_1_1private__member__object__epsilon.xml  classtest__has__member__object_1_1private__member__object__value.xml  classtuple_1_1tuple.xml  cli_8cpp.xml  color_8cpp.xml  color__test_8cpp.xml  deps_2ut_2example_2main_8cpp.xml  deps_2ut_2test_2ft_2main_8cpp.xml  dir_01871785049de82a2ef1b35e39b0e9b9.xml  dir_33931a973dd71fa43dd282ab5a2b2bdd.xml  dir_39c54827d249aacb0808747b055198b7.xml  dir_59425e443f801f1f2fd8bbe4959a3ccf.xml  (+122 more)
docs/sphinx/source/: api_reference.rst  canvas.rst  color.rst  conf.py  doxygen.rst  index.rst  tuple.rst
docs/xml/: Doxyfile.xml
scripts/: pkgconf_paths.sh
src/: CMakeLists.txt  canvas.cpp  color.cpp  light_and_shading.cpp  matrix.cpp  matrix_transformations.cpp  meson.build  ray_sphere_intersections.cpp  tuple.cpp
tests/: CMakeLists.txt  canvas_test.cpp  color_test.cpp  light_and_shading_test.cpp  matrix_test.cpp  matrix_transformations_test.cpp  meson.build  ray_sphere_intersections_test.cpp  tuple_test.cpp
toolchains/: debian-arm64.cmake  debian-x64.cmake  macos-arm64.cmake  macos-x64.cmake  win-arm64.cmake  win-x64.cmake
